<resources>

    <string name="app_name">U惠</string>
    <string name="document_string">假装这是文案</string>
    <string name="mainpage_title_string">"推荐"</string>

    <!--Splash Activity-->
    <string name="splash_title1">出售闲置券</string>
    <string name="splash_title2">购买所需券</string>
    <string name="splash_title3">U惠</string>
    <string name="splash_content_above1">官方估值</string>
    <string name="splash_content_above2">样式齐全</string>
    <string name="splash_content_above3">便利优惠券交易平台</string>
    <string name="splash_content_below1">合理开价卖更快</string>
    <string name="splash_content_below2">让你各方面优惠</string>
    <string name="splash_content_below3"></string>

    <!-- 登录与注册 -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="welcome">欢迎来到U券！</string>

    <!-- 登录界面 -->
    <string name="login_name_hint">手机号</string>
    <string name="login_pass_hint">密码</string>
    <string name="check_string">验证码</string>

    <!--注册界面-->
    <string name="register_phone_hint">手机号码</string>
    <string name="register_title_string">快速注册</string>
    <string name="register_next_string">下一步</string>
    <string name="register_identify_title">获取验证码</string>
    <string name="register_identify_text">我们发送了验证码至</string>
    <string name="register_indentify_timertext">s</string>
    <string name="register_indentify_resent_text">重新发送</string>
    <string name="register_complete_button_string">完成注册</string>
    <string name="register_return_text_string">已经有账户了?直接登录</string>

    <string name="register_password_title">设置密码</string>
    <string name="register_password_hint">密码</string>
    <string name="register_password_confirm_hint">确认密码</string>

    <string name="register_final_title">完善个人信息</string>
    <string name="register_final_hint">昵称</string>


    <!-- 忘记密码界面 -->
    <string name="reset_password_title">重置密码</string>
    <string name="reset_new_password_string">输入新密码</string>
    <string name="reset_password_confirm_string">再次输入新密码</string>
    <string name="get_identifyid_text">点击获取</string>
    <string name="reset_confirm_buttontext">确认</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="category_title_string">类别</string>
    <string name="nav_mainpage">主页</string>
    <string name="nav_message">消费</string>
    <string name="nav_history">交易</string>
    <string name="nav_userinfo">我的</string>

    <!--历史记录-->
    <string name="HISTORY_EOF">EOF</string>
    <string name="CLEAR_HISTORY">清除历史记录</string>

    <!-- 用户界面 -->
    <string name="uopt_title">我的</string>
    <string name="uopt_mycoupon">我的优惠券</string>
    <string name="uopt_mywallet">我的钱包</string>
    <string name="uopt_sell">我卖出的</string>
    <string name="uopt_buy">我买到的</string>
    <string name="uopt_collect">我关注的</string>
    <string name="uopt_settings">应用设置</string>
    <string name="uopt_help">帮助与反馈</string>
    <string name="uopt_logoff">注销</string>

    <!-- 用户信息修改界面 -->
    <string name="uinf_title">我的信息</string>
    <string name="uinf_changeportrait">更换头像</string>
    <string name="uinf_changephone">修改手机号</string>
    <string name="uinf_changekey">修改密码</string>

    <!-- 更换头像菜单 -->
    <string name="uport_takephoto">拍照</string>
    <string name="uport_fromalbum">从相册中选择</string>

    <!-- 用户钱包界面 -->
    <string name="uwal_title">我的钱包</string>
    <string name="uwal_ub">钱包余额</string>
    <string name="uwal_sell">出售优惠券</string>
    <string name="uwal_recharge">充值U币</string>

    <!-- 用户设置界面 -->
    <string name="uset_title">应用设置</string>
    <string name="uset_clear">清除缓存</string>
    <string name="title_activity_user_photo">UserPhotoActivity</string>

    <!--消息界面-->
    <string name="coupon_bought_title">上架的优惠券被购买</string>
    <string name="coupon_abouttoexpire_title">上架的优惠券即将过期</string>
    <string name="coupon_expired_title">上架的优惠券已过期</string>
    <string name="coupon_followed_abouttoexpire_title">关注的优惠券即将过期</string>
    <string name="coupon_mine_aboutto_expire_title">我的优惠券即将过期</string>
    <string name="coupon_system_title">系统消息</string>

    <string name="coupon_info">优惠券详情</string>

    <!-- 修改信息界面 -->
    <string name="user_update_nickname">修改昵称</string>
    <string name="user_update_gender">修改性别</string>
    <string name="user_update">修改</string>
    <string name="user_update_phone">修改手机号</string>
    <string name="title_activity_register_new">RegisterNewActivity</string>

    <string name="upload_image"><u>上传图片</u></string>
<<<<<<< HEAD
    <string name="title_activity_thing_purchase">ThingPurchaseActivity</string>
=======

    <string name="help_content">U惠——基于P2P的在线优惠券交易平台\n
        在这里你可以购买别人的优惠券、添加并上架自己的优惠券!</string>
>>>>>>> 9b69e4a82cf91b0b9c594c6eac9a396ac1bb5159
</resources>
