<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0F3F6">

    <LinearLayout style="@style/user_wrap_layout" android:id="@+id/user_top">
        <LinearLayout style="@style/user_top_layout">
            <com.example.administrator.ccoupons.Tools.XCRoundImageView style="@style/user_portrait_layout"
                android:id="@+id/user_portrait"/>
            <LinearLayout style="@style/user_info_layout">
                <TextView style="@style/user_text" android:textSize="24dp" android:textColor="@color/white" android:text="用户名" />
                <TextView style="@style/user_text" android:textColor="@color/white" android:text="电话号" />
            </LinearLayout>
            <ImageView style="@style/user_img_big_arrow"/>
        </LinearLayout>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:text="@string/uopt_mycoupon" />
            <ImageView style="@style/user_img_arrow"/>
        </LinearLayout>
        <ImageView style="@style/user_divider"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:text="@string/uopt_mywallet" />
            <TextView android:id="@+id/user_ub" style="@style/user_text" android:textColor="@color/gray"
                android:layout_weight="0" android:layout_marginRight="5dp" />
            <ImageView style="@style/user_img_arrow"/>
        </LinearLayout>
        <ImageView style="@style/user_edgeline"/>
    </LinearLayout>

    <LinearLayout style="@style/user_wrap_layout" >
        <ImageView style="@style/user_edgeline"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:text="@string/uopt_sell" />
            <ImageView style="@style/user_img_arrow"/>
        </LinearLayout>
        <ImageView style="@style/user_divider"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:text="@string/uopt_buy" />
            <ImageView style="@style/user_img_arrow"/>
        </LinearLayout>
        <ImageView style="@style/user_divider"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:text="@string/uopt_collect" />
            <ImageView style="@style/user_img_arrow"/>
        </LinearLayout>
        <ImageView style="@style/user_edgeline"/>
    </LinearLayout>

    <LinearLayout style="@style/user_wrap_layout">
        <ImageView style="@style/user_edgeline"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:text="@string/uopt_settings" />
            <ImageView style="@style/user_img_arrow"/>
        </LinearLayout>
        <ImageView style="@style/user_divider"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:text="@string/uopt_help"/>
            <ImageView style="@style/user_img_arrow"/>
        </LinearLayout>
        <ImageView style="@style/user_edgeline"/>
    </LinearLayout>

</LinearLayout>