<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.ccoupons.Main.ResetPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/reset_pass_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/MainToolBarStyle"
        android:background="@color/colorPrimary">
        <TextView
            style="@style/MainToolbarTitleStyle"
            android:text="@string/reset_password_title"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reset_phone_inputlayout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/MainEditTextStyle"
                android:id="@+id/reset_phone_edittext"
                android:inputType="number"
                android:maxLength="11"
                android:digits="1234567890"
                android:hint="@string/login_name_hint"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout

                android:id="@+id/reset_cord_inputlayout"
                android:layout_marginTop="5dp"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/MainEditTextStyle"
                    android:id="@+id/reset_cord_edittext"
                    android:inputType="number"
                    android:maxLength="4"
                    android:digits="1234567890"
                    android:hint="@string/check_string"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/get_identifyid_text"
                android:id="@+id/request_cord_button"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="18dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_get_identifyid"
                />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reset_newpass_inputlayout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.administrator.ccoupons.CustomEditText.PasswordToggleEditText
                style="@style/MainEditTextStyle"
                android:id="@+id/reset_newpass_edittext"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/reset_new_password_string"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reset_confirmpass_inputlayout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.administrator.ccoupons.CustomEditText.PasswordToggleEditText
                style="@style/MainEditTextStyle"
                android:id="@+id/reset_confirmpass_edittext"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/reset_password_confirm_string"/>
        </android.support.design.widget.TextInputLayout>

        <Button style="@style/MainButtonsStyle"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/reset_button_ok"
            android:layout_marginTop="20dp"
            android:text="@string/reset_confirm_buttontext"/>
    </LinearLayout>

</LinearLayout>
