<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.ccoupons.Register.RegisterPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_password_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/MainToolBarStyle"
        android:background="@color/colorPrimary">
        <TextView
            style="@style/MainToolbarTitleStyle"
            android:text="@string/register_password_title"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/MainEditTextStyle"
                android:id="@+id/register_input_pass"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/register_password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/MainEditTextStyle"
                android:id="@+id/register_input_confirmpass"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/register_password_confirm_hint"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/register_password_button_next"
            style="@style/MainButtonsStyle"
            android:text="@string/register_next_string"
            />

    </LinearLayout>

</LinearLayout>
