<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0F3F6">

    <android.support.v7.widget.Toolbar
        android:id="@+id/uinf_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView style="@style/user_title_text" android:layout_gravity="center" android:text="@string/uinf_title"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout style="@style/user_wrap_layout" >
        <LinearLayout style="@style/user_row_layout" android:id="@+id/change_portrait">
            <com.example.administrator.ccoupons.Tools.XCRoundImageView
                style="@style/user_portrait_layout" android:layout_marginRight="15dp"
                android:layout_height="60dp" android:layout_width="60dp" android:id="@+id/uinf_portrait"/>
            <TextView style="@style/user_text" android:textSize="20dp" android:text="@string/uinf_changeportrait" />
            <ImageView style="@style/user_img_arrow"/>
        </LinearLayout>
        <ImageView style="@style/user_divider" android:layout_margin="0dp"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:textColor="@color/lightgray" android:id="@+id/user_name" />
        </LinearLayout>
        <ImageView style="@style/user_divider"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:id="@+id/user_sex" />
        </LinearLayout>
        <ImageView style="@style/user_divider"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:id="@+id/user_age" />
        </LinearLayout>
        <ImageView style="@style/user_edgeline"/>
    </LinearLayout>

    <LinearLayout style="@style/user_wrap_layout">
        <ImageView style="@style/user_edgeline"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:text="@string/uinf_changephone" />
            <ImageView style="@style/user_img_arrow"/>
        </LinearLayout>
        <ImageView style="@style/user_divider"/>
        <LinearLayout style="@style/user_row_layout">
            <TextView style="@style/user_text" android:text="@string/uinf_changekey"/>
            <ImageView style="@style/user_img_arrow"/>
        </LinearLayout>
        <ImageView style="@style/user_edgeline"/>
    </LinearLayout>
</LinearLayout>
