<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_bg"
    android:theme="@style/MainEditTextTheme"
    android:orientation="vertical"
    tools:context="com.example.administrator.ccoupons.Register.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_main_toolbar_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/MainToolBarStyle">

        <TextView
            style="@style/MainToolbarTitleStyle"
            android:text="@string/register_title_string" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_username" />

            <!--TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="+86"
                android:textColor="@color/whitesmoke"
                android:textSize="24dp" /-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_phone_inputlayout_new"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/register_phone_input_new"
                    style="@style/MainEditTextStyle"
                    android:digits="1234567890"
                    android:hint="@string/register_phone_hint"
                    android:inputType="number"
                    android:maxLength="11" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_identify" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_identify_inputlayout_new"
                style="@style/MainEditTextHolderStyle"
                android:layout_width="0dp"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/register_identify_input_new"
                    style="@style/MainEditTextStyle"
                    android:digits="1234567890"
                    android:hint="验证码"
                    android:inputType="number"
                    android:maxLength="4" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_identify_button_new"
                style="@style/MainButtonsStyle"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.5"
                android:text="获取验证码"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_firstpassword_inputlayout_new"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/register_firstpassword_input_new"
                    style="@style/MainEditTextStyle"
                    android:hint="@string/register_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="16" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_confirmpassword" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_confirmpassword_inputlayout_new"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/register_confirmpass_input_new"
                    style="@style/MainEditTextStyle"
                    android:hint="@string/register_password_confirm_hint"
                    android:inputType="textPassword"
                    android:maxLength="16" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_nickname" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_nickname_inputlayout_new"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/register_nickname_input_new"
                    style="@style/MainEditTextStyle"
                    android:hint="@string/register_final_hint"
                    android:inputType="text"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/register_final_radiogroup_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="性别"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_male_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:height="40dp"
                android:background="@null"
                android:button="@null"
                android:drawableLeft="@drawable/gender_male_radio_btn"
                android:drawablePadding="30dp"
                android:text="男"
                android:textColor="@color/whitesmoke"
                android:textSize="24dp" />

            <RadioButton
                android:id="@+id/radio_button_female_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:height="40dp"
                android:background="@null"
                android:button="@null"
                android:drawableLeft="@drawable/gender_female_radio_btn"
                android:drawablePadding="30dp"
                android:text="女"
                android:textColor="@color/whitesmoke"
                android:textSize="24dp" />

        </RadioGroup>

        <Button
            android:id="@+id/register_button_finish_new"
            style="@style/MainButtonsStyle"
            android:layout_marginTop="20dp"
            android:text="@string/register_complete_button_string"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/text_return_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/register_return_text_string"
            android:textColor="@color/whitesmoke"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>
