<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.ccoupons.Register.RegisterFinalActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_final_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/MainToolBarStyle"
        android:background="@color/colorPrimary">
        <TextView
            style="@style/MainToolbarTitleStyle"
            android:text="@string/register_final_title"
            />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content">


    <!--用不用后台自动生成一个数字昵称先？-还是用手机号？-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="输入昵称:"
                android:textSize="24dp"
                />

            <com.example.administrator.ccoupons.CustomEditText.ClearableEditText
                android:text="妈卖批哦"
                android:id="@+id/register_final_username"
                style="@style/MainEditTextStyle"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/register_final_hint"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="性别(可选):"
                android:textSize="24dp"

                />
            <RadioGroup
                android:id="@+id/register_final_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:contentDescription="性别">

                <RadioButton
                    android:id="@+id/radio_button_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:text="男"/>

                <RadioButton
                    android:id="@+id/radio_button_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:text="女"/>

            </RadioGroup>
        </LinearLayout>

        <Button
            style="@style/MainButtonsStyle"
            android:layout_marginTop="30dp"
            android:id="@+id/register_final_button_next"
            android:text="@string/register_next_string"
            />



    </LinearLayout>
</LinearLayout>
